--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
             vertical-align: middle;
         }
-        .col-md-6 {
+        .col-sm-6 {
             margin: 0 auto;
         }
         .form {
@@ -67,10 +67,10 @@
     <br>
     <br>
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-sm-3">
         </div>
 
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <form method="post">
                 <input class='form' name="formSelection" type="button" value="Sign In" onclick="go('https://airtable.com/embed/shrqOocFEEgUAf5kq?backgroundColor=orange')"/>
                 &nbsp;&nbsp;&nbsp;
@@ -83,7 +83,7 @@
             </iframe>
       </div> 
 
-      <div class="col-md-2">
+      <div class="col-sm-3">
       </div>
     </div>
 
