--- a/pages/thrift.html
+++ b/pages/thrift.html
@@ -88,7 +88,7 @@
                 &nbsp;&nbsp;&nbsp;
                 <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign Out" onclick="go('https://airtable.com/embed/shrCWBNHqJMd0xr24?backgroundColor=orange')"/>
 
-            </form>
+            </form><br>
             <iframe id="form" class="airtable-embed" src= "https://airtable.com/embed/shrqI1gUIaJQVM236?backgroundColor=orange"
                 frameborder="0" onmousewheel="" width="100%" height="600"
                 style="background: transparent; border: 1px solid #ccc;">
