--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 
         <div class="col-sm-6">
             <br>
-            <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ReXxZcI3qZQ??rel=0&modestbranding=1"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <video width="800" height="400" controls>
+                <source src="resources/video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
         </div>
 
         <div class="col-sm-3">
