--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <style type="text/css">
         body {
             background-image: url('resources/images.jpg');
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
             background-attachment: fixed;
-            background-size: 100% 100%;
             background-position: center;
         }
 
@@ -89,7 +88,7 @@
         </div>
 
         <div class="col-sm-3">
-            <h3>Which one of our sites are you visiting?</h3>
+            <h3>Which one of our sites are you currently at?</h3>
             
         </div>
 
