--- a/pages/office.html
+++ b/pages/office.html
@@ -5,9 +5,8 @@
     <style type="text/css">
         body {
             background-image: url('../resources/images.jpg');
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
             background-attachment: fixed;
-            background-size: 100% 100%;
             background-position: center;
         }
         .row {
