--- a/pages/thrift.html
+++ b/pages/thrift.html
@@ -5,9 +5,8 @@
     <style type="text/css">
         body {
             background-image: url('../resources/images.jpg');
-            background-repeat: no-repeat;
+            /* background-repeat: no-repeat; */
             background-attachment: fixed;
-            background-size: 100% 100%;
             background-position: center;
         }
         .row {
@@ -84,12 +83,14 @@
 
         <div class="col-sm-6">
             <form method="post">
-                <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign In" onclick="go('https://airtable.com/embed/shrqI1gUIaJQVM236?backgroundColor=orange')"/>
+                <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="New or Update Profile" onclick="go('https://airtable.com/embed/shrBeDxZYbkhfj4SR?backgroundColor=orange')"/>
                 &nbsp;&nbsp;&nbsp;
-                <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign Out" onclick="go('https://airtable.com/embed/shrCWBNHqJMd0xr24?backgroundColor=orange')"/>
+                <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign In" onclick="go('https://airtable.com/embed/shrJ2eft1iCnhJ5T7?backgroundColor=orange')"/>
+                &nbsp;&nbsp;&nbsp;
+                <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign Out" onclick="go('https://airtable.com/embed/shrUQ9MqosQ92KUCc?backgroundColor=orange')"/>
 
             </form><br>
-            <iframe id="form" class="airtable-embed" src= "https://airtable.com/embed/shrqI1gUIaJQVM236?backgroundColor=orange"
+            <iframe id="form" class="airtable-embed" src= "https://airtable.com/embed/shrJ2eft1iCnhJ5T7?backgroundColor=orange"
                 frameborder="0" onmousewheel="" width="100%" height="600"
                 style="background: transparent; border: 1px solid #ccc;">
             </iframe>
