--- a/pages/thrift.html
+++ b/pages/thrift.html
@@ -90,7 +90,7 @@
                 <input class='btn btn-primary btn-lg' name="formSelection" type="button" value="Sign Out" onclick="go('https://airtable.com/embed/shrUQ9MqosQ92KUCc?backgroundColor=orange')"/>
 
             </form><br>
-            <iframe id="form" class="airtable-embed" src= "https://airtable.com/embed/shrJ2eft1iCnhJ5T7?backgroundColor=orange"
+            <iframe id="form" class="airtable-embed" src= "about:blank"
                 frameborder="0" onmousewheel="" width="100%" height="600"
                 style="background: transparent; border: 1px solid #ccc;">
             </iframe>
