--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             /* background-repeat: no-repeat; */
             background-attachment: fixed;
             background-position: center;
+            overflow-x: hidden;
+        }
+        .highlighted {
+            background-color: rgba(0, 0, 0, 0.5);
         }
 
         .row {
@@ -77,7 +81,7 @@
         </div>
 
         <div id="welcome" class="col-sm-6">
-            <h1>Welcome to Christian Family Care!</h1><br>
+            <h1><span class="highlighted">Welcome to Christian Family Care!</span></h1><br>
         </div>
 
         <div class="col-sm-3">
@@ -88,7 +92,7 @@
         </div>
 
         <div class="col-sm-3">
-            <h3>Which one of our sites are you currently at?</h3>
+            <h3><span class="highlighted">Which one of our sites are you currently at?</span></h3>
             
         </div>
 
@@ -101,18 +105,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3">
-        </div>
-
-        <div class="col-sm-6">
+         <div class="col-sm-12">
             <br>
             <video width="800" height="400" controls>
                 <source src="resources/video.mp4" type="video/mp4">
               Your browser does not support the video tag.
               </video>
-        </div>
-
-        <div class="col-sm-3">
         </div>
     </div>
 
