--- a/pages/thrift.html
+++ b/pages/thrift.html
@@ -8,6 +8,7 @@
             /* background-repeat: no-repeat; */
             background-attachment: fixed;
             background-position: center;
+            overflow-x: hidden;
         }
         .row {
             text-align: center;
