--- a/pages/client.html
+++ b/pages/client.html
@@ -94,17 +94,17 @@
         </button>
     </div>
 
-    <!-- New blurb above Sign In -->
+    <!-- Blurb above Sign In -->
     <p style="font-size: 22px; margin-top: 30px;">
         Click the <strong>Sign In</strong> button to get started.
     </p>
 
     <div>
-        <button class="btn" onclick="go('https://airtable.com/embed/shrpFy9aQnxgPbl5j?backgroundColor=cyan')">
+        <button class="btn" onclick="go('https://airtable.com/apphErpA2dUqBGBba/shrWr1Xz46HfapXMg?backgroundColor=cyan')">
             Sign In
         </button>
 
-        <button class="btn" onclick="go('https://airtable.com/apphErpA2dUqBGBba/shrWr1Xz46HfapXMg?backgroundColor=cyan')">
+        <button class="btn" onclick="go('https://airtable.com/embed/shrz2TRw2ZOaIkgkS?backgroundColor=cyan')">
             Sign Out
         </button>
     </div>
