--- a/pages/client.html
+++ b/pages/client.html
@@ -100,10 +100,12 @@
     </p>
 
     <div>
-        <button class="btn" onclick="go('https://airtable.com/apphErpA2dUqBGBba/shrWr1Xz46HfapXMg?backgroundColor=cyan')">
+        <!-- Correct Airtable embed link -->
+        <button class="btn" onclick="go('https://airtable.com/embed/shrWr1Xz46HfapXMg?backgroundColor=cyan')">
             Sign In
         </button>
 
+        <!-- Sign Out remains the same -->
         <button class="btn" onclick="go('https://airtable.com/embed/shrz2TRw2ZOaIkgkS?backgroundColor=cyan')">
             Sign Out
         </button>
